--- a/css/airspace.css
+++ b/css/airspace.css
@@ -231,7 +231,10 @@ font header .navbar-default .navbar-nav li a:hover {
 	Feature Start
 --*/
 #feature {
-  background: url("../img/lcl2.jpg");
+	/*--
+	lcl
+--*/
+  background: url("../img/paris_airscape_1.jpg");
   background-position: 50% 94px;
   width: 100%;
   display: block;
@@ -607,7 +610,10 @@ font header .navbar-default .navbar-nav li a:hover {
 	slider-contact Start
 --*/
 #slider-contact {
-  background: url("../img/lcl2.jpg") no-repeat;
+	/*--
+	slider-contact Start
+--*/
+  background: url("../img/paris_airscape_1.jpg") no-repeat;
   background-size: cover;
   padding-top: 150px;
   padding-bottom: 107px;
