--- a/css/airspace.css
+++ b/css/airspace.css
@@ -611,7 +611,7 @@ font header .navbar-default .navbar-nav li a:hover {
 --*/
 #slider-contact {
 	/*--
-	slider-contact Start
+	lcl
 --*/
   background: url("../img/paris_airscape_1.jpg") no-repeat;
   background-size: cover;
