--- a/css/airspace.css
+++ b/css/airspace.css
@@ -97,7 +97,7 @@ font header .navbar-default .navbar-nav li a:hover {
 	Slider Start
 --*/
 #slider {
-  background: url("../img/paris_airscape_1.jpg") no-repeat;
+  background: url("../img/hague_1.jpg") no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: 10% 0%;
@@ -361,7 +361,7 @@ font header .navbar-default .navbar-nav li a:hover {
 	Slider-work Start
 --*/
 #global-header {
-  background: url("../img/paris_airscape_1.jpg") no-repeat;
+  background: url("../img/hague_1.jpg") no-repeat;
   background-size: cover;
   padding-top: 150px;
   padding-bottom: 107px;
