--- a/css/airspace.css
+++ b/css/airspace.css
@@ -97,7 +97,7 @@ font header .navbar-default .navbar-nav li a:hover {
 	Slider Start
 --*/
 #slider {
-  background: url("../img/paris_airscape_crop.jpg") no-repeat;
+  background: url("../img/paris_airscape_1.jpg") no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: 10% 0%;
@@ -234,7 +234,7 @@ font header .navbar-default .navbar-nav li a:hover {
 	/*--
 	lcl
 --*/
-  background: url("../img/paris_airscape_1.jpg");
+  background: url("../img/white_bg.png");
   background-position: 50% 94px;
   width: 100%;
   display: block;
@@ -361,7 +361,7 @@ font header .navbar-default .navbar-nav li a:hover {
 	Slider-work Start
 --*/
 #global-header {
-  background: url("../img/paris_airscape_crop.jpg") no-repeat;
+  background: url("../img/paris_airscape_1.jpg") no-repeat;
   background-size: cover;
   padding-top: 150px;
   padding-bottom: 107px;
@@ -613,7 +613,7 @@ font header .navbar-default .navbar-nav li a:hover {
 	/*--
 	lcl
 --*/
-  background: url("../img/paris_airscape_1.jpg") no-repeat;
+  background: url("../img/white_bg.png") no-repeat;
   background-size: cover;
   padding-top: 150px;
   padding-bottom: 107px;
